fix Image & BackgroundImageOverlayEffect z-index's

--- a/src/components/layout/backgroundImageWrapper.module.css
+++ b/src/components/layout/backgroundImageWrapper.module.css
@@ -7,7 +7,7 @@
     top: 50% !important;
     left: 50% !important;
     transform: translate(-50%, -50%);
-    z-index: -1;
+    z-index: -2;
   }
 
   .backgroundImageOverlayEffect {
@@ -15,7 +15,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 0;
+    z-index: -1;
     width: 100%;
     height: 100%;
   }
